--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "cc-log.io",
   "description": "Realtime log monitoring in your browser",
   "version": "0.3.4",
-  "homepage": "http://logio.org",
+  "homepage": "https://github.com/CreditCloud/Log.io",
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/CreditCloud/Log.io.git"
+  },
   "keywords": ["logs", "monitoring", "realtime", "socket.io", "node.js", "ajax"],
   "author": "Mike Smathers <msmathers@narrativescience.com>",
   "contributors": [
@@ -33,7 +37,6 @@
   },
   "scripts": {
     "prepublish": "cake build",
-    "postinstall": "cake ensure:configuration",
-    "server": "node bin/log.io-server"
+    "postinstall": "cake ensure:configuration"
   }
 }
